# neerlandistiek-chatbot

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
scripts/: chat.py  extract_text.py
src/int_chatbot/: data.py  embeddings.py  query.py  utils.py
